--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "prepublish": "npm run build",
     "build": "tsc",
-    "test": "karma start",
+    "test": "mocha -r ts-node/register test/**/*.spec.ts",
+    "karma": "karma start",
     "lint": "tslint -c tslint.json 'src/**/*.ts' --type-check --format stylish"
   },
   "repository": {
@@ -25,19 +26,12 @@
   "homepage": "https://github.com/D4v1X/ts-optional-class#readme",
   "dependencies": {},
   "devDependencies": {
+    "@types/chai": "^4.1.2",
     "@types/jasmine": "^2.8.6",
+    "@types/mocha": "^5.0.0",
     "@types/node": "^9.6.1",
-    "awesome-typescript-loader": "^4.0.1",
-    "jasmine": "^3.1.0",
-    "jasmine-core": "^3.1.0",
-    "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^2.0.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-cli": "^1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.4.2",
-    "karma-jasmine": "^1.1.1",
-    "karma-jasmine-html-reporter": "^1.0.0",
-    "karma-webpack": "^3.0.0",
+    "chai": "^4.1.2",
+    "mocha": "^5.1.0",
     "ts-node": "^5.0.1",
     "tslint": "^5.9.1",
     "typescript": "^2.8.1",
