--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "prepublish": "npm run build",
     "build": "tsc",
     "test": "mocha -r ts-node/register test/**/*.spec.ts",
-    "karma": "karma start",
-    "lint": "tslint -c tslint.json 'src/**/*.ts' --type-check --format stylish"
+    "lint": "tslint -c tslint.json 'src/**/*.ts' --format stylish"
   },
   "repository": {
     "type": "git",
@@ -26,15 +25,15 @@
   "homepage": "https://github.com/D4v1X/ts-optional-class#readme",
   "dependencies": {},
   "devDependencies": {
-    "@types/chai": "^4.1.2",
-    "@types/jasmine": "^2.8.6",
-    "@types/mocha": "^5.0.0",
-    "@types/node": "^9.6.1",
-    "chai": "^4.1.2",
-    "mocha": "^5.1.0",
-    "ts-node": "^5.0.1",
-    "tslint": "^5.9.1",
-    "typescript": "^2.8.1",
-    "webpack": "^4.4.1"
+    "@types/chai": "4.1.2",
+    "@types/mocha": "5.0.0",
+    "@types/node": "9.6.5",
+    "chai": "4.1.2",
+    "mocha": "5.1.0",
+    "ts-node": "5.0.1",
+    "tslint": "5.9.1",
+    "tslint-eslint-rules": "5.1.0",
+    "tslint-microsoft-contrib": "^5.0.3",
+    "typescript": "2.8.1"
   }
 }
