--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/node": "9.6.5",
     "chai": "4.1.2",
     "mocha": "5.1.0",
+    "prettier": "1.12.0",
     "ts-node": "5.0.1",
     "tslint": "5.9.1",
     "tslint-eslint-rules": "5.1.0",
