Removed not used npm scripts.

--- a/package.json
+++ b/package.json
@@ -5,16 +5,15 @@
   "main": "src/optional.ts",
   "scripts": {
     "start": "npm run build",
-    "clean": "rimraf bin && rimraf coverage",
+    "clean": "rimraf coverage",
     "lint": "tslint -c tslint.json 'src/**/*.ts' 'tests/**/*.ts' --format stylish",
     "check": "npm run lint -s && dependency-check ./package.json",
     "pretest": "tsc",
     "test": "mocha -r ts-node/register test/**/*.spec.ts",
-    "posttest": "rimraf bin/tests",
     "compile": "tsc",
     "build": "npm run compile",
     "postbuild": "npm run check -s && npm run test -s",
-    "coverage": "nyc --reporter=html --reporter=text npm run test",
+    "coverage": "nyc npm run test",
     "coveralls": "npm run coverage -s && coveralls < coverage/lcov.info",
     "postcoveralls": "rimraf ./coverage",
     "prepublish": "npm run build -s",
