Changed the main file.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ts-optional-class",
   "version": "1.0.1",
   "description": "Optional Type in TypeScript like Java Optional API",
-  "main": "src/optional.ts",
+  "main": "dist/optional.js",
   "scripts": {
     "start": "npm run build",
     "clean": "rimraf coverage",
